force-app/main/default/objects/ConnectOtherCash__c/ConnectOtherCash__c.object-meta.xml
<CustomObject>
    <label>Other+Cash</label>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>CONN OT-CA ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other+Cash</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>