force-app/main/default/objects/ConnectOtherCash__c/fields/CashID__c.field-meta.xml
<CustomField>
    <fullName>CashID__c</fullName>
    <label>CASH ID</label>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipLabel>CONNECT OTHER REVENUE/COST &amp; CASH</relationshipLabel>
    <relationshipName>ConnectOtherCash</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>