force-app/main/default/objects/ConnectOtherCash__c/fields/OtherRecordTypeForCash__c.field-meta.xml
<CustomField>
    <fullName>OtherRecordTypeForCash__c</fullName>
    <label>OTHER RECORD TYPE-CASH</label>
    <length>50</length>
    <type>Text</type>
</CustomField>