force-app/main/default/objects/ConnectOtherCash__c/fields/OtherRecordTypeFormu__c.field-meta.xml
<CustomField>
    <fullName>OtherRecordTypeFormu__c</fullName>
    <formula>CashID__r.RecordType.Name</formula>
    <label>OTHER RECORD TYPE-FORMU</label>
    <type>Text</type>
</CustomField>