force-app/main/default/objects/ConnectOtherCash__c/fields/OtherRevenueCostID__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenueCostID__c</fullName>
    <label>OTHER</label>
    <referenceTo>OtherRevenueCost__c</referenceTo>
    <relationshipLabel>CONNECT OTHER &amp; CASH</relationshipLabel>
    <relationshipName>ConnectRevenueCostID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>