force-app/main/default/objects/ConnectOtherCash__c/fields/UnpaidBalanceOfOtherForCash__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfOtherForCash__c</fullName>
    <label>UNPAID BALANCE OF OTHER-FOR CASH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>