force-app/main/default/objects/ConnectOtherCash__c/fields/UnpaidBalanceOtherCostLocal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOtherCostLocal__c</fullName>
    <formula>OtherRevenueCostID__r.DifferenceOtherCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF OTHER(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>