force-app/main/default/objects/ConnectOtherCash__c/fields/UnreceivedBalanceOfOtherForCash__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceOfOtherForCash__c</fullName>
    <label>UNRECEIVED BALANCE OF OTHER-FOR CASH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>